Fix font size issue on iOS

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -23,12 +23,16 @@
     transform: scale(0.96);
 }
 
-.post-content code {
-    font-size: 0.9rem;
-}
-
 .post-content a:hover code {
     box-shadow: 0 -1px 0 var(--primary) inset;
+}
+
+code {
+    font-size: 0.9rem;
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 .meta-item {
